--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: "Poppins", sans-serif;
+  --font-family-sans-serif: "DeSotoW00-Engraved", sans-serif;
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
@@ -55,8 +55,8 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: "Poppins", sans-serif;
-  font-size: 1rem;
+  font-family: "DeSotoW00-Engraved", sans-serif;
+  font-size: .8rem;
   font-weight: 400;
   line-height: 1.5;
   color: #818491;
@@ -362,7 +362,7 @@ template {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
-  font-family: "EB+Garamond", sans-serif;
+  font-family: "DeSotoW00-Engraved", sans-serif;
   font-weight: 500;
   line-height: 1.2;
   color: #22395d;
