--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: "DeSotoW00-Engraved", sans-serif;
+  --font-family-sans-serif: "Poppins", sans-serif;
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
@@ -55,7 +55,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: "DeSotoW00-Engraved", sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: .8rem;
   font-weight: 400;
   line-height: 1.5;
@@ -178,6 +178,10 @@ kbd,
 samp {
   font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   font-size: 1em;
+}
+
+.headers {
+  font-family: "DeSotoW00";
 }
 
 pre {
@@ -372,7 +376,7 @@ template {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
-  font-family: "DeSotoW00-Engraved", sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 500;
   line-height: 1.2;
   color: #22395d;
@@ -2348,11 +2352,11 @@ textarea.form-control {
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-@media (prefers-reduced-motion: reduce) {
+/* @media (prefers-reduced-motion: reduce) {
   .btn {
     transition: none;
   }
-}
+}  */
 
 .btn:hover {
   color: #818491;
@@ -2365,14 +2369,14 @@ textarea.form-control {
 }
 
 .btn.disabled, .btn:disabled {
-  opacity: 0.65;
+  /* opacity: 0.65; */
 }
 
 .btn:not(:disabled):not(.disabled) {
   cursor: pointer;
 }
 
-a.btn.disabled,
+ a.btn.disabled,
 fieldset:disabled a.btn {
   pointer-events: none;
 }
@@ -2396,11 +2400,11 @@ fieldset:disabled a.btn {
   box-shadow: 0 0 0 0.2rem rgba(38, 171, 255, 0.5);
 }
 
-.btn-primary.disabled, .btn-primary:disabled {
+ .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
   background-color: #009CFF;
   border-color: #009CFF;
-}
+} 
 
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
@@ -9617,7 +9621,7 @@ h4, h5, h6 {
   border: 2px solid #FFFFFF;
   text-decoration: none;
   transition: .5s;
-  opacity: 0;
+  opacity: 0.7;
 }
 
 .product-item:hover a,
